--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "http-proxy-middleware": "^0.19.1",
     "node-sass": "^4.10.0",
     "react": "^16.6.3",
     "react-addons-css-transition-group": "^15.6.2",
