--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-scripts": "2.1.1",
     "react-swipe": "^6.0.3",
     "redux": "^4.0.1",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "swiper": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
